--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,6 @@ test:
 
 production:
   <<: *default
-  database: ENV['DB_NAME']
-  username: ENV['DB_USERNAME']
-  password: ENV['DB_PASSWORD']
+  database: postgres
+  username: postgres
 
